--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,29 +11,61 @@
 </div>
 
 <div class="container mb-2">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
-                <hr>
-            </div>
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="logo-font mb-4">Shopping Bag</h2>
+            <hr>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col">
-                {% if bag_items %}
-                    <div class="table-responsive rounded"></div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Create A Custom Candle</span>   
-                    </a>
-                {% endif %}
-            </div>
+    <div class="row">
+        <div class="col">
+           
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Jar Colour</th>
+                        <th scope="col">Scent One</th>
+                        <th scope="col">Scent Two</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                   
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>{{  }}</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                   
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>Total:</td>
+                        <td>{{}}</td>
+                    </tr>
+                </tfoot>
+
+            </table>
+            
+            <p class="lead mb-5">Your bag is empty.</p>
+            <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Create A Custom Candle</span>
+            </a>
+            {% endif %}
         </div>
+    </div>
 
 
-{% endblock %}
+    {% endblock %}
